# clip_pop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  justfile
i18n/en/: clip_pop.ftl
resources/: app.desktop  app.metainfo.xml  com.github.jvcByte.clip_pop.autostart.desktop  com.github.jvcByte.clip_pop.metainfo.xml
src/: app.rs  clipboard.rs  clipboard_watcher.rs  config.rs  db.rs  history.rs  main.rs
