[package]
name = "clip_pop"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A clipboard manager for the COSMIC™ desktop"
repository = "https://github.com/jvcByte/clip_pop"

[package.metadata]
app-id = "com.github.jvcByte.clip_pop"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
futures-util = "0.3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = "0.14"
mime = "0.3"
nucleo = "0.5"
open = "5.3.2"
regex = "1"
rust-embed = "8.8.0"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wl-clipboard-rs = "0.9"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "about",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]

[patch.'https://github.com/pop-os/cosmic-text']
cosmic-text = { path = "../cosmic-text" }
