[package]
name = "clip_pop"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A clipboard manager for the COSMIC™ desktop"
repository = "https://github.com/jvcByte/clip_pop"

[package.metadata]
app-id = "com.github.jvcByte.clip_pop"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
futures-util = "0.3"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = "0.14"
mime = "0.3"
nucleo = "0.5"
open = "5.3.2"
os_pipe = "1"
regex = "1"
rust-embed = "8.8.0"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wl-clipboard-rs = "0.9"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "f06d15ae35204cb3bcef5a3188b5ec59a1cc9bfd"
features = [
    "a11y",
    "about",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]

[dev-dependencies]
tempfile = "3"

[patch.'https://github.com/pop-os/cosmic-text']
cosmic-text = { git = "https://github.com/jvcByte/cosmic-text", rev = "d5a972a" }
